@@ -30,6 +30,12 @@
 	* sawfish.ebuild.in: remove audiofile/esound
 	                     missing `fi' added
 
+2010-01-03  Jeremy Hankins <nowan@nowan.org>
+	* lisp/sawfish/wm/state/wm-spec.jl
+	* lisp/sawfish/wm/viewport.jl: Fixed bug where gnome-pager gets
+		  confused about the viewport when displaying all
+		  workspaces.
+
 2010-01-02  Christopher Bratusek <zanghar@freenet.de>
 	* po/Makefile.in: don't remove sawfish.pot upon distclean
 
